--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "client",
 	"private": true,
-	"proxy": "http://localhost:5000",
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite",
@@ -10,8 +9,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "^1.7.2",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.2.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
